refresh issue solve

--- a/WebApi/ClientApp/src/app/login/admin-login/admin-login.component.html
+++ b/WebApi/ClientApp/src/app/login/admin-login/admin-login.component.html
@@ -12,7 +12,7 @@
       <div [hidden]="emailField.valid || emailField.untouched" class="alert alert-danger">Enter an Email</div>
       <div *ngIf='message' class="alert alert-danger">{{message}}</div>
     </div>
-    <button type="submit" class="btn btn-primary" style="background-color: #563d7c" [routerLink]="['/adminDashboard']">Login</button>
+    <button type="submit" class="btn btn-primary" style="background-color: #563d7c">Login</button>
   </form>
   </div>
 </div>
