--- a/WebApi/ClientApp/src/app/empleave/empleave-list/empleave-list.component.html
+++ b/WebApi/ClientApp/src/app/empleave/empleave-list/empleave-list.component.html
@@ -12,13 +12,18 @@
         </div>
       </div>
 <div class='table-responsive'>
+  <div style="padding:10px;">
+    <h5>Leave balance</h5>
+    <tr *ngFor="let item of leaveleft() | keyvalue">
+      <td *ngFor="let i of item.value | keyvalue"><b>{{i.key}}</b> : {{i.value}},&nbsp;</td>
+    </tr>
+  </div>
     <table class='table' *ngIf='e1'>
       <thead>
         <tr>
           <th>Employee Name</th>
           <th>Start Date</th>
           <th>End Date</th>
-          <th>Leave Balance</th>
           <th>Leave Type</th>
           <th>Number of Days</th>
           <th>Status</th>
@@ -30,7 +35,6 @@
           <td>{{emp.emp_name}}</td>
           <td>{{emp.start}}</td>
           <td>{{emp.end}}</td>
-          <td>10</td> 
           <td>{{emp.leave_name}}</td>
           <td>{{calDays(emp.start, emp.end)}}</td>
           <td>{{emp.status}}</td>
