--- a/WebApi/ClientApp/src/app/leave/leave-add/leave-add.component.html
+++ b/WebApi/ClientApp/src/app/leave/leave-add/leave-add.component.html
@@ -16,13 +16,13 @@
       <input type="hidden" name="id" [value]='leave1.l_id'/>
       <div class="form-group row">
       <label class="col-md-4" for="fname">Name : </label>
-      <input type="text" id="fname" name="fname" [(ngModel)]='leave1.l_name'>
+      <input type="text" id="fname" name="fname" [(ngModel)]='leave1.l_name' required>
       </div>
       <div class="form-group row">
       <label class="col-md-4" for="lname">Number of days : </label>
-      <input type="number" id="lname" name="lname" [(ngModel)]='leave1.no_of_days'>
+      <input type="number" id="lname" name="lname" [(ngModel)]='leave1.no_of_days' required>
       </div>
-      <input class='btn btn-primary' type="button" value="Add" style="background-color: #563d7c;" (click)='add()'>
+      <input [disabled]="!form.valid" class='btn btn-primary' type="button" value="Add" style="background-color: #563d7c;" (click)='add()'>
       </div>
     </form>
   </div>
