--- a/WebApi/ClientApp/src/app/employee-profile/employee-profile.component.html
+++ b/WebApi/ClientApp/src/app/employee-profile/employee-profile.component.html
@@ -3,12 +3,12 @@
       <h3>Profile</h3>
     </div>
     <div style="padding:10px;">
-      <button class='btn btn-primary' style="background-color: #563d7c;" [routerLink]="['/employeeDashboard/employeeProfileEdit',emp1.e_id]">
+      <button *ngIf="emp1" class='btn btn-primary' style="background-color: #563d7c;" [routerLink]="['/employeeDashboard/employeeProfileEdit',emp1.e_id]">
           Edit Details
 </button>
 </div>
     <div class="card-body">
-        <div class='table-responsive'>
+        <div *ngIf="emp1" class='table-responsive'>
             <table class='table'>
               <tbody>
                 <tr>
